[gd_scene load_steps=3 format=3 uid="uid://7vw3v1j3ix1o"]

[ext_resource type="Script" path="res://Scenes/Economy/Goldspawner.gd" id="1_uhoyv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13k6q"]
size = Vector2(448, 320)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uhoyv")

[node name="ExcludedArea" type="Area2D" parent="."]
self_modulate = Color(1, 0.329412, 1, 1)
top_level = true
position = Vector2(660, 360)
disable_mode = 1
priority = 1

[node name="ExcludedShape" type="CollisionShape2D" parent="ExcludedArea"]
position = Vector2(12, -8)
shape = SubResource("RectangleShape2D_13k6q")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
